manifests/apps/securebank-api-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: securebank-api-blue
  namespace: securebank
spec:
  replicas: 2
  selector:
    matchLabels:
      app: securebank-api
      version: blue
  template:
    metadata:
      labels:
        app: securebank-api
        version: blue
    spec:
      serviceAccountName: securebank-api   # <-- Added line
      containers:
      - name: api
        image: rajkumarvangeti/securebank-api:b361f1b276190a5e5e0bc3d9e623cc76e0bcd5d4
        ports:
        - containerPort: 8080
