manifests/apps/securebank-api-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: securebank-api-green
  namespace: securebank
spec:
  replicas: 2
  selector:
    matchLabels:
      app: securebank-api
      version: green
  template:
    metadata:
      labels:
        app: securebank-api
        version: green
    spec:
      containers:
      - name: api
        image: rajkumarvangeti/securebank-api:5d014bddb0241398ce0a30964be1c765dc3efaf7
        ports:
        - containerPort: 8080
