manifests/apps/securebank-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: securebank-api
  namespace: securebank
spec:
  replicas: 2
  selector:
    matchLabels:
      app: securebank-api
  template:
    metadata:
      labels:
        app: securebank-api
    spec:
      serviceAccountName: securebank-api   # <-- Added line
      containers:
      - name: api
        image: rajkumarvangeti/securebank-api:8ef93011ec072404eda5356a53f92de3953bc1d8
        ports:
        - containerPort: 8080
