manifests/apps/securebank-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: securebank-api
  namespace: securebank
spec:
  selector:
    app: securebank-api
    version: green   # switch here between blue/green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
