manifests/apps/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: securebank
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
